Bug 153697 - when location is focused, ctrl-a should mark all the text, not the icons
Summary: when location is focused, ctrl-a should mark all the text, not the icons
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-08 23:27 UTC by Morten O. Hansen
Modified: 2007-12-16 20:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
patch for bug (1.04 KB, patch)
2007-12-09 02:35 UTC, Morten O. Hansen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Morten O. Hansen 2007-12-08 23:27:26 UTC
Version:           0.9.5 (from svn) (using KDE Devel)
Installed from:    Compiled sources
Compiler:          gcc version 4.2.3 20071123 (prerelease) (Debian 4.2.2-4) 
OS:                Linux

When the location-bar is focused in dolphin, ctrl-a just marks all the icons. It should mark the text in the location-bar.

How to reproduce:

1) Start dolphin
2) F6 (jump to location-bar)
3) Ctrl-A now marks all the icons, not the text.
Comment 1 Morten O. Hansen 2007-12-09 02:35:05 UTC
Created attachment 22422 [details]
patch for bug


Hi, i tried to fix it myself. Seems to work OK now.

It will only try to mark the text if it is currently in UrlEditable-mode (and
the navigator is active).
Comment 2 Peter Penz 2007-12-16 20:26:12 UTC
SVN commit 749188 by ppenz:

If the URL navigator is editable and has the focus, Ctrl+A should select the URL and not all items (thanks to Morton O. Hansen for the patch!)

BUG: 153697


 M  +19 -5     dolphinmainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=749188