If the URL navigator is editable and has the focus, Ctrl+A should select the URL and not all items (thanks to Morton O. Hansen for the patch!)

BUG: 153697

svn path=/trunk/KDE/kdebase/apps/; revision=749188